syntax = "proto3";

package candle;

option go_package = "./";

// Candle service definition
service CandleProtoService {
    rpc GetCandles(GetCandlesRequest) returns (GetCandlesResponse) {}
    rpc GetCandleStats(GetCandleStatsRequest) returns (GetCandleStatsResponse) {}
    rpc GetCandleLatest(GetCandleLatestRequest) returns (GetCandleLatestResponse) {}
    rpc PostCandleValidate(PostCandleValidateRequest) returns (PostCandleValidateResponse) {}
    rpc GetCandlesAggregate(GetCandlesAggregateRequest) returns (GetCandlesAggregateResponse) {}
}

message Candle {
    uint64 open_time = 1;
    double open = 2;
    double high = 3;
    double low = 4;
    double close = 5;
    double volume = 6;
    uint64 close_time = 7;
    double quote_asset_volume = 8;
    uint64 number_of_trades = 9;
}

message GetCandlesRequest {
    string symbol = 1;
    string interval = 2;
    uint64 start_time = 3;
    uint64 end_time = 4;
}

message GetCandlesResponse {
    repeated Candle candles = 1;
}

message GetCandleStatsRequest {
    string pair = 1;
    string time_frame = 2;
}

message GetCandleStatsResponse {
    repeated Candle candles = 1;
}

message GetCandleLatestRequest {
    string pair = 1;
    string time_frame = 2;
}

message GetCandleLatestResponse {
    Candle candle = 1;
}

message PostCandleValidateRequest {
    Candle candle = 1;
}

message PostCandleValidateResponse {
    bool is_valid = 1;
}

message GetCandlesAggregateRequest {
    string pair = 1;
}

message GetCandlesAggregateResponse {
    repeated Candle candles = 1;
}
